--- a/notebooks/preprocessing_and_training_data_development.ipynb
+++ b/notebooks/preprocessing_and_training_data_development.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ac5cba06",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "BMI                        18.938776  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3dd44d48",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "BMI                        18.938776  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9cb88a20",
    "metadata": {},
    "outputs": [
@@ -600,15 +600,15 @@
        "      <th>UREA</th>\n",
        "      <th>CREATININE</th>\n",
        "      <th>...</th>\n",
-       "      <th>KEY COMPLAINTS-CODE_other-tertalogy</th>\n",
-       "      <th>PAST MEDICAL HISTORY CODE_diabetes2</th>\n",
        "      <th>PAST MEDICAL HISTORY CODE_hypertension1</th>\n",
        "      <th>PAST MEDICAL HISTORY CODE_hypertension2</th>\n",
        "      <th>PAST MEDICAL HISTORY CODE_hypertension3</th>\n",
        "      <th>PAST MEDICAL HISTORY CODE_other</th>\n",
        "      <th>PAST MEDICAL HISTORY CODE_unknown</th>\n",
+       "      <th>MODE OF ARRIVAL_AMBULANCE</th>\n",
        "      <th>MODE OF ARRIVAL_TRANSFERRED</th>\n",
        "      <th>MODE OF ARRIVAL_WALKED IN</th>\n",
+       "      <th>TYPE OF ADMSN_ELECTIVE</th>\n",
        "      <th>TYPE OF ADMSN_EMERGENCY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -630,9 +630,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -654,9 +654,9 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -675,13 +675,13 @@
        "      <td>0.8</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
@@ -698,12 +698,12 @@
        "      <td>74.0</td>\n",
        "      <td>1.5</td>\n",
        "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -723,11 +723,11 @@
        "      <td>1.9</td>\n",
        "      <td>...</td>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -735,7 +735,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>5 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -746,26 +746,12 @@
        "3  46.0         80.0        173.0       122    110.0    80.0  24  11.8  74.0   \n",
        "4  60.0         58.0        175.0        72    180.0   100.0  18  10.0  48.0   \n",
        "\n",
-       "   CREATININE  ...  KEY COMPLAINTS-CODE_other-tertalogy  \\\n",
-       "0         0.8  ...                                False   \n",
-       "1         1.7  ...                                False   \n",
-       "2         0.8  ...                                False   \n",
-       "3         1.5  ...                                False   \n",
-       "4         1.9  ...                                False   \n",
-       "\n",
-       "   PAST MEDICAL HISTORY CODE_diabetes2  \\\n",
-       "0                                False   \n",
-       "1                                False   \n",
-       "2                                 True   \n",
-       "3                                False   \n",
-       "4                                 True   \n",
-       "\n",
-       "   PAST MEDICAL HISTORY CODE_hypertension1  \\\n",
-       "0                                    False   \n",
-       "1                                    False   \n",
-       "2                                    False   \n",
-       "3                                     True   \n",
-       "4                                    False   \n",
+       "   CREATININE  ...  PAST MEDICAL HISTORY CODE_hypertension1  \\\n",
+       "0         0.8  ...                                    False   \n",
+       "1         1.7  ...                                    False   \n",
+       "2         0.8  ...                                    False   \n",
+       "3         1.5  ...                                     True   \n",
+       "4         1.9  ...                                    False   \n",
        "\n",
        "   PAST MEDICAL HISTORY CODE_hypertension2  \\\n",
        "0                                    False   \n",
@@ -781,31 +767,38 @@
        "3                                    False                            False   \n",
        "4                                    False                            False   \n",
        "\n",
-       "   PAST MEDICAL HISTORY CODE_unknown  MODE OF ARRIVAL_TRANSFERRED  \\\n",
-       "0                               True                        False   \n",
-       "1                               True                        False   \n",
-       "2                              False                        False   \n",
-       "3                              False                        False   \n",
-       "4                              False                        False   \n",
+       "   PAST MEDICAL HISTORY CODE_unknown  MODE OF ARRIVAL_AMBULANCE  \\\n",
+       "0                               True                       True   \n",
+       "1                               True                       True   \n",
+       "2                              False                      False   \n",
+       "3                              False                       True   \n",
+       "4                              False                       True   \n",
        "\n",
-       "   MODE OF ARRIVAL_WALKED IN  TYPE OF ADMSN_EMERGENCY  \n",
-       "0                      False                     True  \n",
-       "1                      False                     True  \n",
-       "2                       True                    False  \n",
-       "3                      False                     True  \n",
-       "4                      False                     True  \n",
+       "   MODE OF ARRIVAL_TRANSFERRED  MODE OF ARRIVAL_WALKED IN  \\\n",
+       "0                        False                      False   \n",
+       "1                        False                      False   \n",
+       "2                        False                       True   \n",
+       "3                        False                      False   \n",
+       "4                        False                      False   \n",
        "\n",
-       "[5 rows x 35 columns]"
+       "   TYPE OF ADMSN_ELECTIVE  TYPE OF ADMSN_EMERGENCY  \n",
+       "0                   False                     True  \n",
+       "1                   False                     True  \n",
+       "2                    True                    False  \n",
+       "3                   False                     True  \n",
+       "4                   False                     True  \n",
+       "\n",
+       "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#create dummy for the categorical variables \n",
-    "df = pd.get_dummies(df, drop_first=True)\n",
+    "df = pd.get_dummies(df)\n",
     "df.head()"
    ]
   },
@@ -819,13 +812,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "ddd839d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop(columns='TOTAL COST TO HOSPITAL')\n",
+    "y = df['TOTAL COST TO HOSPITAL']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "50ecbead",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(df.drop(columns='TOTAL COST TO HOSPITAL'), \n",
-    "                                                    df['TOTAL COST TO HOSPITAL'], test_size=0.3, \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, \n",
+    "                                                    y, test_size=0.3, \n",
     "                                                    random_state=42)"
    ]
   },
@@ -838,7 +842,7 @@
     {
      "data": {
       "text/plain": [
-       "((168, 34), (72, 34), (168,), (72,))"
+       "((168, 40), (72, 40), (168,), (72,))"
       ]
      },
      "execution_count": 7,
@@ -902,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "f7c9dc33",
    "metadata": {},
    "outputs": [],
@@ -914,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "fa501c4f",
    "metadata": {},
    "outputs": [],
@@ -927,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "a92ffc81",
    "metadata": {},
    "outputs": [],
@@ -936,6 +940,18 @@
     "df_X_test.to_pickle('../data/X_test.pkl')\n",
     "df_y_train.to_pickle('../data/y_train.pkl')\n",
     "df_y_test.to_pickle('../data/y_test.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e837ac80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also same the orginal X and y\n",
+    "X.to_csv('../data/features.csv')\n",
+    "y.to_csv('../data/cost.csv')"
    ]
   }
  ],
